# btfdump

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: btf.rs  btf_index.rs  c_dumper.rs  lib.rs  main.rs  relocator.rs  types.rs
tests/: tests.rs
tests/samples/: bitfields.c  cycles.c  embed_array.c  embed_array2.c  embed_func_proto.c  embed_func_proto2.c  embed_struct.c  embed_typedef.c  embed_typedef_cycle.c  embed_typedef_cycle2.c  funcs.c  naming_conflicts.c  order_test.c  order_test2.c  order_test4.c  ordering.c  printing_arrays.c  ptrs.c  simple.c
tests/samples/bpf/: chained_relocs.c  prog.c  relocs.c  simple_relocs.c  tracex1_kern.c
