[package]
name = "btfdump"
description = "BTF introspection tool"
version = "0.0.4"
authors = ["Andrii Nakryiko <andrii@kernel.org>"]
license = "BSD-2-Clause"
edition = "2018"
readme = "README.md"
repository = "https://github.com/anakryiko/btfdump"
keywords = ["btf", "bpf"]

[lib]
name = "btf"
path = "src/lib.rs"

[[bin]]
name = "btf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "wrap_help"] }
goblin = "0.8.0"
object = "0.36.0"
memmap = "0.7.0"
scroll = "0.12.0"
scroll_derive = "0.12.0"
regex = "1"
lazy_static = "1"
bitflags = "2"

[dev-dependencies]
tempfile = "3.8.0"
